# archive

Triple Matching/: output_test.json
Triple Matching/1_最终代码实现_规则方式/: model.ipynb  model_updated.ipynb  output_train.json
Triple Matching/2_未采用代码_RNN_CNN/: word_RNN.ipynb
calc+mem/: addvector  addvector.cu  addvector_ctxv3  addvector_ctxv3.cu  matmul_ctxv3  matmul_ctxv3.cu  set_mps.sh  test_gemm.cu
calc+mem/mat/: matmul  matmul.cpp1.ii  matmul.cpp4.ii  matmul.cu  matmul.cubin  matmul.cudafe1.c  matmul.cudafe1.cpp  matmul.cudafe1.gpu  matmul.cudafe1.stub.c  matmul.fatbin  matmul.fatbin.c  matmul.module_id  matmul.ptx  matmul.sm_52.cubin
cuda-rl/: RL_agent.py  env.py  gen_engine.sh  init.bash  main.py  runjob.bash  runjob_hammer.bash  test_5.sh  test_a+g_bs64.sh  test_a+g_mps50.sh  test_m2m_diffbatch.sh  test_m2m_diffmps.sh  test_nohup.sh
cuda-rl/result/: Q_table_0.csv  Q_table_100.csv  Q_table_120.csv  (+8 more)
docker_migration/: lm_client.py  lm_container.py  lm_migrate.py  lm_migratetools.py  lm_opts.py  lm_util.py  lmcheck.py  main.py  server.py
dropbox/dropbox/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
dropbox/dropbox/lib/: netdisk.h
dropbox/dropbox/server/: main.cpp  tcpserver.cpp  user_actions.cpp  user_actions.h
onnx/: gen_onnx_conv.py  gen_onnx_leakyrelu.py  onnx_benchmark.cpp
part code of AIMDB/: executor.cc  executor.h
rop/: ropcsu.py  ropdl32norelo.py  ropreg.py
unicom credit score/: DeciTree_baseline_split1&4.ipynb  Lightgbm_baseline.ipynb  preprocessing_add_diff.ipynb  xgboost_baseline.ipynb
web/: data_handle.py  init.sql
(+36 files in other folders)
